--- a/home.css
+++ b/home.css
@@ -5,9 +5,10 @@
 #CCA8E9
  */
 
-body {
+body, html {
   background-color: #DEFCF9;
   text-align: center;
+  margin: 0;
 }
 
 h1{
@@ -34,7 +35,7 @@ h2 {
 
 }
 
-a {
+.answers a {
   font-family: 'Yellowtail', cursive;
   border-radius: 20px;
   margin: 1.5em;
@@ -46,7 +47,7 @@ a {
   padding: 0.5em 5em;
 }
 
-a:hover {
+.answers a:hover {
   border: 2px solid #CCA8E9;
   background-color: #DEFCF9;
 }
@@ -55,4 +56,8 @@ a:hover {
   width: 12.5em;
   height: 14em;
   border-radius: 50%;
+}
+
+.home-image:hover {
+  opacity: 90%;
 }
